--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@
     }
 
     body {
-        font-family: "Rubik", sans-serif;
+        font-family: sans-serif;
         line-height: 1;
         font-weight: 400;
         color: #555;
@@ -32,7 +32,7 @@
         margin: 0 auto;
     }
 
-    .grid {
+    .grid1 {
         display: grid;
         column-gap: 6.4rem;
         row-gap: 9.6rem;
@@ -40,9 +40,9 @@
         /* margin-bottom: 9.6rem; */
     }
 
-    .grid:not(:last-child) {
+    /*.grid:not(:last-child) {
         margin-bottom: 9.6rem;
-    }
+    }*/
 
     .grid--2-cols {
         grid-template-columns: repeat(2, 1fr);
@@ -202,7 +202,7 @@
         outline: none;
         /* outline: 4px dotted #e67e22; */
         /* outline-offset: 8px; */
-        box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
+        /*box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);*/
     }
 
     /* HELPER/SETTINGS CLASSES */
@@ -282,13 +282,13 @@
 
     }
 
-    .btn--absloute {
+    .btn--flex {
         background-color: #fff;
         border: none;
         height: 40px;
         width: 40px;
         border-radius: 50%;
-        position: absolute;
+        /*position: absolute;*/
         box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
         cursor: pointer;
 
